--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,20 +1,23 @@
 security:
-    # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
+    encoders:
+        App\Entity\User: auto
+        App\Entity\UsersAdmin: auto
     providers:
-        users_in_memory: { memory: null }
+        my_provider:
+            entity:
+                class: App\Entity\Users
+                property: username
+
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             anonymous: lazy
-            provider: users_in_memory
-
-            # activate different ways to authenticate
-            # https://symfony.com/doc/current/security.html#firewalls-authentication
-
-            # https://symfony.com/doc/current/security/impersonating_user.html
-            # switch_user: true
+            form_login:
+                login_path: login
+                check_path: login
+                provider: my_provider
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
